<resources>
    <string name="app_name">AI Result</string>
    <string name="upload">Upload</string>
    <string name="choose_machine_learning_model">Choose machine learning model</string>
    <string name="model">Model</string>
    <string name="file">File</string>
    <string name="choose_your_file">Choose your file</string>
    <string name="menu">Menu</string>
    <string name="back">Back</string>
    <string name="login_details">Log in</string>
    <string name="password">Password</string>
    <string name="do_not_have_an_account_sign_up">Do not have an account? Sign up</string>
    <string name="login">Log in</string>
    <string name="History">History</string>
    <string name="settings">Settings</string>
    <string name="openDrawer">open drawer</string>
    <string name="closeDrawer">close drawer</string>
    <string name="username">Username</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="log_in_CAP">SIGN IN</string>
    <string name="sign_up_CAP">SIGN UP</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="contentDescription_avatar">Avatar</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="contentDescription_background_img">background image</string>
    <string name="loginLayout_topText">Welcome Back,</string>
    <string name="loginLayout_bottomText">Sign in to continue!</string>
    <string name="already_have_an_account_log_in">Already have an account? Log in</string>
    <string name="signuplayout_toptext">Let\'s Get Started!</string>
    <string name="signuplayout_bottomtext">Create an account for all latest\'s features</string>
    <string name="upload_CAP">UPLOAD</string>
    <string name="request_frequency">Request Frequency</string>
    <string name="top_5_models">Top 5 Models</string>
    <string name="last_24h_users">Last 24h Users</string>
    <string name="last_24h_request">Last 24h Request</string>
    <string name="profile">Profile</string>
    <string name="admin">Admin</string>
    <string name="itemHistory_result">Result:</string>
    <string name="itemHistory_data">Data:</string>
    <string name="itemHistory_hintExpandHistoryDetail">Expand history detail</string>
    <string name="all_0">0</string>
    <string name="adminAnalytics_modelList">Model List</string>
    <string name="adminAnalytics_userList">User List</string>
    <string name="by">by</string>
    <string name="inferences">inferences</string>
    <string name="Use">Use</string>
    <string name="Details">Details</string>
    <string name="Explore">Explore</string>
    <string name="model_name">Model Name</string>
    <string name="name">Model 1</string>
    <string name="model_date">Created Date</string>
    <string name="date">XX/YY/ZZZZ</string>
    <string name="model_creator">Creator</string>
    <string name="creator">A, B, C, etc.</string>
    <string name="model_description">Description</string>
    <string name="description">This model use something to do something and something </string>
    <string name="model_source">Source</string>
    <string name="model_numuse">Number of using</string>
    <string name="like">Like</string>
    <string name="dislike">Dislike</string>
    <string name="image">Image of the model</string>
    <string name="thumb_up">Thumb up</string>
    <string name="thumb_down">Thumb down</string>
    <string name="model_tag">Tags</string>
    <string name="tag">Models</string>
    <string name="profile_image">Profile Image</string>
    <string name="profile_name">Profile Name</string>
    <string name="profile_introduce">Introduce about myself</string>
    <string name="role">Role</string>
    <string name="profile_model">Uploaded Model</string>
    <string name="profile_email">Email</string>
    <string name="profile_phonenum">Phone Number</string>
    <string name="profile_username">Username</string>
    <string name="profile_password">Password</string>
    <string name="profile_location">Location</string>
    <string name="profile_dob">Date of birth</string>
    <string name="edit_profile">Edit profile</string>
    <string name="change_pass">Change password</string>
    <string name="Share">Share</string>
    <string name="About_this_model">About this model</string>
    <string name="Ratings_and_comments">Ratings and comments</string>
    <string name="Most_used_models">Most used models</string>
    <string name="Similar_models">Similar models</string>
    <string name="Menu">Menu</string>
    <string name="Username">Username</string>
    <string name="Shortcut">Shortcut</string>
    <string name="Uploaded">Uploaded</string>
    <string name="Used_models">Used models</string>
    <string name="Resources">Resources</string>
    <string name="App_version">App version</string>
    <string name="Account_info">Account info</string>
    <string name="Change_password">Change password</string>
    <string name="Account_information">Account information</string>
    <string name="Log_out">Log out</string>
    <string name="Anonymous">Anonymous</string>
    <string name="Model_information">Model information</string>
    <string name="About">About</string>
    <string name="Created_at">Created at</string>
    <string name="Total_ratings">Total ratings</string>
    <string name="Parameters">Parameters</string>
    <string name="Inferences">Inferences</string>
    <string name="loginLayout_landText">Welcome back, sign in to continue!</string>
    <string name="Usermenu_image">Usermenu Image</string>
    <string name="Rcm_model_image">RCM Model Drawable</string>
    <string name="List_review_image">List Review Drawable</string>
    <string name="created">Created:</string>
    <string name="more_vert">More Vert</string>
    <string name="Role_colon">Role:</string>
    <string name="Upload">Upload</string>
    <string name="Uploaded_Models">Uploaded Models</string>
    <string name="MPAP">MPAP</string>
    <string name="info_fragment">Info fragment</string>
    <string name="dataset_fragment">Dataset fragment</string>
    <string name="model_fragment">Model fragment</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="cancel">Cancel</string>
    <string name="button_upload">Upload Button</string>
    <string name="version">Version</string>
    <string name="Email">Email</string>
    <string name="Role">Role</string>
</resources>