<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.profile.InfoFragment">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/activity_horizontal_margin"
        app:layout_constraintTop_toTopOf="parent"
        android:stretchColumns="1">

        <TableRow>
            <TextView
                android:text="@string/first_name"
                android:paddingVertical="8dp"
                android:textStyle="bold"
                android:textSize="18sp"/>
            <TextView
                android:id="@+id/textView_userInfo_firstName"
                tools:text="A"
                android:gravity="end"
                android:paddingVertical="8dp"
                android:textSize="18sp"/>
        </TableRow>

        <TableRow>
            <TextView
                android:text="@string/last_name"
                android:paddingVertical="8dp"
                android:textStyle="bold"
                android:textSize="18sp"/>
            <TextView
                android:id="@+id/textView_userInfo_lastName"
                tools:text="Nguyen Van"
                android:gravity="end"
                android:paddingVertical="8dp"
                android:textSize="18sp"/>
        </TableRow>

        <TableRow>
            <TextView
                android:text="@string/Email"
                android:paddingVertical="8dp"
                android:textStyle="bold"
                android:textSize="18sp"/>
            <TextView
                android:id="@+id/textView_userInfo_email"
                tools:text="Hidden"
                android:gravity="end"
                android:paddingVertical="8dp"
                android:textSize="18sp"/>
        </TableRow>

        <TableRow>
            <TextView
                android:text="@string/Created_at"
                android:paddingVertical="8dp"
                android:textStyle="bold"
                android:textSize="18sp"/>
            <TextView
                android:id="@+id/textView_userInfo_createAt"
                tools:text="1/1/1970"
                android:gravity="end"
                android:paddingVertical="8dp"
                android:textSize="18sp"/>
        </TableRow>

        <TableRow>
            <TextView
                android:text="@string/Role"
                android:paddingVertical="8dp"
                android:textStyle="bold"
                android:textSize="18sp"/>
            <TextView
                android:id="@+id/textView_userInfo_role"
                tools:text="User"
                android:gravity="end"
                android:paddingVertical="8dp"
                android:textSize="18sp"/>
        </TableRow>


    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>