<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LoginActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginActivity">

    <ImageView
        android:id="@+id/imageView_login_topImage"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:contentDescription="@string/contentDescription_background_img"
        app:layout_constraintBottom_toTopOf="@+id/guideline_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/login_startimage" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <TextView
        android:id="@+id/textview_login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginLayout_topText"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textinputlayout_login_username"
        app:layout_constraintTop_toTopOf="@+id/guideline_login" />

    <TextView
        android:id="@+id/textView_login_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginLayout_bottomText"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="@+id/textinputlayout_login_username"
        app:layout_constraintTop_toBottomOf="@+id/textview_login_title" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textinputlayout_login_username"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="@+id/textinputlayout_login_password"
        app:layout_constraintStart_toStartOf="@+id/textinputlayout_login_password"
        app:layout_constraintTop_toBottomOf="@+id/textView_login_subtitle"
        app:startIconDrawable="@drawable/baseline_person_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edittext_login_username"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/username"
            android:inputType="none"
            android:paddingStart="10dp"
            android:paddingEnd="10dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textinputlayout_login_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginTop="25dp"
        app:startIconDrawable="@drawable/baseline_password_24"
        app:layout_constraintEnd_toEndOf="@+id/button_login"
        app:layout_constraintStart_toStartOf="@+id/button_login"
        app:layout_constraintTop_toBottomOf="@+id/textinputlayout_login_username">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edittext_login_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/password"
            android:inputType="none"
            android:paddingStart="10dp"
            android:paddingEnd="10dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textview_login_forgotpwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:alpha="0.7"
        android:text="@string/forgot_password"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/textinputlayout_login_password"
        app:layout_constraintTop_toBottomOf="@id/textinputlayout_login_password" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginTop="15dp"
        android:text="@string/log_in_CAP"
        android:textColor="#F6F0F0"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/button_login_signup"
        app:layout_constraintStart_toStartOf="@+id/button_login_signup"
        app:layout_constraintTop_toBottomOf="@+id/textview_login_forgotpwd" />

    <TextView
        android:id="@+id/button_login_signup"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:gravity="center_vertical"
        android:text="@string/do_not_have_an_account_sign_up"
        android:textSize="15sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_login" />

</androidx.constraintlayout.widget.ConstraintLayout>