<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragmentUpload"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fileChoose"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="35dp"
        app:layout_constraintBottom_toTopOf="@id/modelDropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:startIconDrawable="@drawable/baseline_upload_file_24">

        <AutoCompleteTextView
            android:id="@+id/autoCompleteFilePath"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/file"
            android:inputType="none"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/choose_your_file" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/modelDropdown"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:startIconDrawable="@drawable/baseline_auto_fix_high_24">

        <AutoCompleteTextView
            android:id="@+id/autoCompleteModel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/model"
            android:inputType="none"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/choose_a_machine_learning_model"
            app:hintTextAppearance="@style/TextHint" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/uploadButton"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="45dp"
        android:text="@string/upload_CAP"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/modelDropdown"
        app:layout_constraintStart_toStartOf="@+id/modelDropdown"
        app:layout_constraintTop_toBottomOf="@+id/modelDropdown" />


</androidx.constraintlayout.widget.ConstraintLayout>